<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/second_player"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startGameButtonId"
        android:textSize="27sp"
        android:textStyle="bold"
        android:text="@string/start_game"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/first_player"
        android:gravity="center"
        android:minHeight="200dp"
        android:layout_margin="5dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/help"
            android:id="@+id/helpButtonId"
            android:drawableLeft="@drawable/help_icon"
            tools:ignore="ButtonStyle,RtlHardcoded"
            android:layout_marginEnd="30dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/about"
            android:id="@+id/aboutButtonId"
            android:drawableLeft="@drawable/a_icon"
            tools:ignore="ButtonStyle,RtlHardcoded"
            android:layout_marginEnd="10dp"
            />


    </LinearLayout>

</LinearLayout>